--- a/resources/layouts/layout.xml
+++ b/resources/layouts/layout.xml
@@ -1,4 +1,5 @@
 <layout id="WatchFace" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://developer.garmin.com/downloads/connect-iq/resources.xsd">
+    <label id="batteryLabel" x="center" y="0" justification="Graphics.TEXT_JUSTIFY_CENTER" color="Graphics.COLOR_WHITE" />
     <!-- Hebrew date - slightly higher -->
     <!-- Positions are set dynamically in code based on the device's width and height -->
     <label id="holydayLabel" x="center" y="0" justification="Graphics.TEXT_JUSTIFY_CENTER" color="Graphics.COLOR_WHITE" />
