--- a/resources/layouts/layout.xml
+++ b/resources/layouts/layout.xml
@@ -19,4 +19,7 @@
     <label id="iconsLabel" x="center" y="0" justification="Graphics.TEXT_JUSTIFY_CENTER" color="Graphics.COLOR_WHITE" />
     <label id="stepsLabel" x="0" y="0" font="Graphics.FONT_XTINY" justification="Graphics.TEXT_JUSTIFY_RIGHT" color="Graphics.COLOR_WHITE" />
     <label id="sunLabel" x="0" y="0" font="Graphics.FONT_XTINY" justification="Graphics.TEXT_JUSTIFY_LEFT" color="Graphics.COLOR_WHITE" />
+
+    <!-- Shabbat greeting label -->
+    <label id="shabbatLabel" x="center" y="0" justification="Graphics.TEXT_JUSTIFY_CENTER" color="Graphics.COLOR_WHITE" />
 </layout>
